# wallet-attached-storage-client-python

./: .gitignore  .safety-project.ini  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.beads/: issues.jsonl
docs/: http-signature-format.md
src/wallet_attached_storage_client/: __init__.py  _client.py  _http_signature.py  _resource.py  _signer.py  _space.py  _types.py  _urn_uuid.py
tests/: conftest.py  test_client.py  test_http_signature.py  test_integration.py  test_live.py  test_resource.py  test_signer.py  test_space.py  test_urn_uuid.py
